                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-08-2005 changed: HomeScreen now fully rely on fadetime as set in skin
 - 17-08-2005 fixed: code fade-out/in and skin set fade-out/in was clashing. thus making a control fade-out/in from code wasn't working ( SET_CONTROL_FADE_OUT/IN )
 - 18-08-2005 fixed: queueing in my video title view
 - 18-08-2005 changed: queue item disabled in my videos context menu unless at files or title view
 - 17-08-2005 fixed: ccx+builtin rar support was broken.
 - 17-08-2005 fixed: cdrom gui status. this also fixes add/remove share and autodetect.
 - 17-08-2005 added: if a incomplete rarset is detected, we hand mplayer the '-noidx' switch.
 - 17-08-2005 added: progressbar to rar caching.
 - 17-08-2005 added: Recent Albums to Music Library, presents a list of the last 25 albums scanned into the database
 - 16-08-2005 changed: trust interlaced flag from mplayer, now that we can override it
 - 16-08-2005 fixed: renderes now calculated a the fliptime (used to keep sync) over a running total instead of just last 30frames. 
 - 16-08-2005 added: progress for vobsub processing
 - 16-08-2005 fixed: invalid codecs.conf for passthrough (only static heard)
 - 16-08-2005 updated: added $CDRIPS to the list of special directory tokens
 - 16-08-2005 fixed: special directory tokens work again as bookmark paths ($PLAYLISTS, $THUMBNAILS, etc)
 - 16-08-2005 changed: progressdialog will now be closed without fading if we are plying video, should remove stutter on startup
 - 16-08-2005 updated: mplayer.dll (better rewind, no skip after fastforward, better interlaced detection) + codecs.conf
 - 16-08-2005 changed: some fancontroller/temperature-reading optimizations